fix align youtube vids

--- a/less/base.less
+++ b/less/base.less
@@ -332,6 +332,10 @@ hr {
 	max-height: 600px !important;
 }
 
+article .post-container blockquote {
+	overflow: auto !important;
+}
+
 #post-controls input[name="cancel"] {
 	margin-left: 20px;
 }
@@ -357,6 +361,7 @@ header .mod-checkbox { float: left; }
 	max-height: 78vh !important;
 	width: 100vh !important;
 }
+
 
 
 /* hacks */
@@ -426,3 +431,4 @@ figcaption.spaced > a[download] {
 .thumb.youtube.hide {
 	display: none;
 }
+
